Chinh sua thong bao

--- a/DoAn-CNWEB/dashboard/DBDiscount.html
+++ b/DoAn-CNWEB/dashboard/DBDiscount.html
@@ -140,7 +140,7 @@
                                                             <td>
                                                                 <div class="dashboard-option">
                                                                     <a href="" class="dashboard-option-btn dashboard-update"><i class="fa-solid fa-pen"></i></a>
-                                                                    <a href="" class="dashboard-option-btn dashboard-delete"><i class="fa-solid fa-trash-can"></i></a>
+                                                                    <a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="dashboard-option-btn dashboard-delete"><i class="fa-solid fa-trash-can"></i></a>
                                                                 </div>
                                                             </td>
                                                         </tr>
@@ -182,7 +182,10 @@
             </div>
         </div>
     </div>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script type="text/javascript">
+        // click menu
         $(document).ready(function(){
             $('.dashboard-menu-item-link').click(function(){
                 $(this).next('.dashboard-menu-list-sub').slideToggle('');
@@ -203,6 +206,13 @@
         nav.addEventListener("click",function(e){
             e.stopPropagation();
         })
+        // alert modal
+        $(function()
+        {
+            $('#confirm-delete').on('show.bs.modal', function(e){
+                $(this).find('.btn-delete').attr('href', $(e.relatedTarget).data('href'));
+            });
+        });
     </script>
 </body>
 </html>
