--- a/DoAn-CNWEB/dashboard/EditProduct.html
+++ b/DoAn-CNWEB/dashboard/EditProduct.html
@@ -176,7 +176,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -184,7 +184,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -192,7 +192,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -200,7 +200,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -208,7 +208,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -216,7 +216,7 @@
                                                         <div class="col l-4 m-6 c-12">
                                                             <div class="add-img">
                                                                 <ul class="add-img-menu">
-                                                                    <li><a href="" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
+                                                                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#confirm-delete" title="Delete" class="add-img-btn"><i class="fa-solid fa-plus"></i></a></li>
                                                                     <li><a href="" class="remove-img-btn"><i class="fa-solid fa-trash-can"></i></a></li>
                                                                 </ul>
                                                             </div>
@@ -259,7 +259,10 @@
             </div>
         </div>
     </div>
-   <script type="text/javascript">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        // click menu
         $(document).ready(function(){
             $('.dashboard-menu-item-link').click(function(){
                 $(this).next('.dashboard-menu-list-sub').slideToggle('');
@@ -280,6 +283,13 @@
         nav.addEventListener("click",function(e){
             e.stopPropagation();
         })
+        // alert modal
+        $(function()
+        {
+            $('#confirm-delete').on('show.bs.modal', function(e){
+                $(this).find('.btn-delete').attr('href', $(e.relatedTarget).data('href'));
+            });
+        });
     </script>
 </body>
 </html>
